Added SQL integration test base and schema assertions
Decreased need for repetitive assertions.