@@ -11,6 +11,7 @@ import com.evolveum.polygon.conndev.schema.ValueTypeOverrideMapping;
 import com.evolveum.polygon.sql.base.connection.SqlSchemaValueMapping;
 import com.querydsl.core.types.Path;
 import com.querydsl.core.types.dsl.PathBuilder;
+import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
 import java.util.ArrayList;
@@ -23,353 +24,164 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 /**
  * Tests for composite primary key UID mapping support — specifically
- * {@link SqlAttributeMapping.MultiColumn} created through the
- * SqlAttributeMapping factory and the SqlAttributeBuilderImpl builder.
+ * {@link SqlAttributeMapping.MultiColumn} created through factory and builder.
  */
 @Test(singleThreaded = true)
 public class SqlCompositeUidTest {
 
-    // ── 1. Creating a MultiColumn mapping ──────────────────────────────────
+    // ── Factory creation tests ──
+
+    private SqlAttributeMapping.SingleColumn col(String name, SqlSchemaValueMapping mapping) {
+        return SqlAttributeMapping.singleColumn(
+                DefinitionValue.defaultFrom(name), mapping, mapping);
+    }
 
     @Test
     public void testCreateMultiColumnTwoColumns() {
-        var main = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("id"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-        var extra = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("dept_id"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-
-        var composite = SqlAttributeMapping.multiColumn(main, List.of(extra), ".");
-
-        assertThat(composite).isNotNull();
-        assertThat(composite.mainColumn()).isSameAs(main);
-        assertThat(composite.additionalColumns()).containsExactly(extra);
+        var composite = SqlAttributeMapping.multiColumn(
+                col("id", SqlSchemaValueMapping.INTEGER),
+                List.of(col("dept_id", SqlSchemaValueMapping.INTEGER)), ".");
+        assertThat(composite.additionalColumns()).hasSize(1);
         assertThat(composite.delimiter()).isEqualTo(".");
     }
 
     @Test
     public void testCreateMultiColumnThreeColumns() {
-        var main = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("id"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-        var e1 = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("first"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-        var e2 = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("second"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-
-        var composite = SqlAttributeMapping.multiColumn(main, List.of(e1, e2), ".");
-
-        assertThat(composite.mainColumn()).isSameAs(main);
+        var composite = SqlAttributeMapping.multiColumn(
+                col("id", SqlSchemaValueMapping.INTEGER),
+                List.of(col("first", SqlSchemaValueMapping.INTEGER), col("second", SqlSchemaValueMapping.INTEGER)), ".");
         assertThat(composite.additionalColumns()).hasSize(2);
-        assertThat(composite.additionalColumns().getFirst()).isSameAs(e1);
-        assertThat(composite.additionalColumns().get(1)).isSameAs(e2);
-    }
-
-    @Test
-    public void testCreateMultiColumnNoAdditionalColumns() {
-        var main = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("id"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-
-        var composite = SqlAttributeMapping.multiColumn(main, Collections.emptyList(), ".");
-
-        assertThat(composite).isNotNull();
-        assertThat(composite.mainColumn()).isSameAs(main);
-        assertThat(composite.additionalColumns()).isEmpty();
     }
 
     @Test
     public void testCreateMultiColumnDefaultDelimiter() {
-        var main = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("id"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-        var extra = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("v"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-
-        var composite = SqlAttributeMapping.multiColumn(main, List.of(extra));
-
+        var composite = SqlAttributeMapping.multiColumn(
+                col("id", SqlSchemaValueMapping.INTEGER),
+                List.of(col("v", SqlSchemaValueMapping.INTEGER)));
         assertThat(composite.delimiter()).isEqualTo(".");
     }
 
-    // ── 2. valuesFromAttribute splits by delimiter ────────────────────────
-
     @Test
-    public void testValuesFromAttributeSplitsByDot() {
-        var main = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("id"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-        var extra = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("dept_id"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-
-        var composite = SqlAttributeMapping.multiColumn(main, List.of(extra), ".");
-        var result = composite.valuesFromAttribute("115.23");
-
-        assertThat(result).hasSize(2);
-        assertThat(result.getFirst()).isEqualTo("115");
-        assertThat(result.get(1)).isEqualTo("23");
+    public void testCreateMultiColumnNoAdditionalColumns() {
+        var composite = SqlAttributeMapping.multiColumn(
+                col("id", SqlSchemaValueMapping.INTEGER),
+                Collections.emptyList(), ".");
+        assertThat(composite.additionalColumns()).isEmpty();
     }
 
-    @Test
-    public void testValuesFromAttributeSplitsByCustomDelimiter() {
-        var main = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("id"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-        var extra = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("code"),
-                SqlSchemaValueMapping.VARCHAR, SqlSchemaValueMapping.VARCHAR);
+    // ── valuesFromAttribute (parameterized) ──
 
-        var composite = SqlAttributeMapping.multiColumn(main, List.of(extra), ":");
-        var result = composite.valuesFromAttribute("10:alpha");
-
-        assertThat(result).hasSize(2);
-        assertThat(result.getFirst()).isEqualTo("10");
-        assertThat(result.get(1)).isEqualTo("alpha");
+    @DataProvider
+    public static Object[][] valuesFromAttributeProvider() {
+        return new Object[][]{
+                {"split-by-dot", 2, ".", "115.23", "115", "23"},
+                {"split-by-colon", 2, ":", "10:alpha", "10", "alpha"},
+                {"split-by-dash", 2, "-", "5-100", "5", "100"},
+                {"split-three", 3, ".", "1.2.3", "1", "2", "3"},
+                {"zero-values", 2, ".", "0.0", "0", "0"},
+                {"large-values", 2, ".", "200.500", "200", "500"},
+        };
     }
 
-    @Test
-    public void testValuesFromAttributeSplitsThreeParts() {
-        var main = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("id"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-        var e1 = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("first"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-        var e2 = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("second"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-
-        var composite = SqlAttributeMapping.multiColumn(main, List.of(e1, e2), ".");
-        var result = composite.valuesFromAttribute("1.2.3");
-
-        assertThat(result).hasSize(3);
-        assertThat(result.getFirst()).isEqualTo("1");
-        assertThat(result.get(1)).isEqualTo("2");
-        assertThat(result.get(2)).isEqualTo("3");
+    @Test(dataProvider = "valuesFromAttributeProvider")
+    public void testValuesFromAttribute(String name, int expected, String delimiter, String input, String... parts) {
+        var cols = new ArrayList<SqlAttributeMapping.SingleColumn>();
+        for (int i = 0; i < parts.length; i++) {
+            cols.add(col("col" + i, SqlSchemaValueMapping.INTEGER));
+        }
+        var composite = SqlAttributeMapping.multiColumn(cols.getFirst(), cols.subList(1, cols.size()), delimiter);
+        var result = composite.valuesFromAttribute(input);
+        assertThat(result).hasSize(parts.length);
+        for (int i = 0; i < parts.length; i++) {
+            assertThat(result.get(i)).isEqualTo(parts[i]);
+        }
     }
 
     @Test
     public void testValuesFromAttributeWithNull() {
-        var main = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("id"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-        var composite = SqlAttributeMapping.multiColumn(main, Collections.emptyList(), ".");
-
+        var composite = SqlAttributeMapping.multiColumn(
+                col("id", SqlSchemaValueMapping.INTEGER), Collections.emptyList(), ".");
         assertThat(composite.valuesFromAttribute(null)).isEmpty();
     }
 
     @Test
     public void testValuesFromAttributeWithNonString() {
-        var main = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("id"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-        var composite = SqlAttributeMapping.multiColumn(main, Collections.emptyList(), ".");
-
+        var composite = SqlAttributeMapping.multiColumn(
+                col("id", SqlSchemaValueMapping.INTEGER), Collections.emptyList(), ".");
         var result = composite.valuesFromAttribute(12345);
-        assertThat(result).hasSize(1);
-        assertThat(result.getFirst()).isEqualTo(12345);
-    }
-
-    @Test
-    public void testValuesFromAttributeWithZero() {
-        var main = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("id"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-        var extra = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("dept_id"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-
-        var composite = SqlAttributeMapping.multiColumn(main, List.of(extra), ".");
-        var result = composite.valuesFromAttribute("0.0");
-
-        assertThat(result).hasSize(2);
-        assertThat(result.getFirst()).isEqualTo("0");
-        assertThat(result.get(1)).isEqualTo("0");
-    }
-
-    @Test
-    public void testValuesFromAttributeWithNumericRange() {
-        var main = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("id"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-        var extra = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("dept_id"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-
-        var composite = SqlAttributeMapping.multiColumn(main, List.of(extra), ".");
-        for (String uid : List.of("10.1", "200.500", "1.0")) {
-            var result = composite.valuesFromAttribute(uid);
-            assertThat(result).hasSize(2);
-        }
+        assertThat(result).hasSize(1).containsExactly(12345);
     }
 
     @Test
     public void testValuesFromAttributePreservesCollection() {
-        var main = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("id"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-        var composite = SqlAttributeMapping.multiColumn(main, Collections.emptyList(), ".");
-
-        var list = new ArrayList<String>();
-        list.add("a");
-        list.add("b");
-        var result = composite.valuesFromAttribute((Object) list);
-
-        assertThat(result).hasSize(2);
-        assertThat(result).containsExactly("a", "b");
+        var composite = SqlAttributeMapping.multiColumn(
+                col("id", SqlSchemaValueMapping.INTEGER), Collections.emptyList(), ".");
+        var list = List.of("a", "b");
+        assertThat(composite.valuesFromAttribute(list)).containsExactly("a", "b");
     }
 
-    // ── 3. column() returns main column ───────────────────────────────────
+    // ── column() returns main column ──
 
     @Test
-    public void testColumnReturnsMainColumn() {
-        var main = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("order_id"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-        var extra = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("version"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-
-        var composite = SqlAttributeMapping.multiColumn(main, List.of(extra), ".");
-        assertThat(composite.column().value()).isEqualTo("order_id");
-    }
-
-    @Test
-    public void testColumnAlwaysMainColumnWithExtras() {
-        var main = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("pk1"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-        var e1 = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("pk2"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-        var e2 = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("pk3"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-
-        var composite = SqlAttributeMapping.multiColumn(main, List.of(e1, e2), ".");
+    public void testColumnAlwaysMainColumn() {
+        var composite = SqlAttributeMapping.multiColumn(
+                col("pk1", SqlSchemaValueMapping.INTEGER),
+                List.of(col("pk2", SqlSchemaValueMapping.INTEGER), col("pk3", SqlSchemaValueMapping.INTEGER)), ".");
         assertThat(composite.column().value()).isEqualTo("pk1");
     }
 
-    // ── 4. selectPaths returns all column paths ───────────────────────────
+    // ── selectPaths returns all column paths ──
 
-    @Test
-    public void testSelectPathsReturnsTwoColumns() {
-        var main = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("id"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-        var extra = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("dept_id"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-
-        var composite = SqlAttributeMapping.multiColumn(main, List.of(extra), ".");
-        PathBuilder<Object> tablePath = new PathBuilder<>(Object.class, "test_table");
-        Collection<? extends Path<?>> paths = composite.selectPaths(tablePath);
-
-        assertThat(paths).hasSize(2);
+    @DataProvider
+    public static Object[][] selectPathsProvider() {
+        return new Object[][]{
+                {"one-column", 0},
+                {"two-columns", 1},
+                {"three-columns", 2},
+        };
     }
 
-    @Test
-    public void testSelectPathsReturnsThreeColumns() {
-        var main = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("id"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-        var e1 = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("first"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-        var e2 = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("second"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-
-        var composite = SqlAttributeMapping.multiColumn(main, List.of(e1, e2), ".");
+    @Test(dataProvider = "selectPathsProvider")
+    public void testSelectPaths(String name, int additionalCount) {
+        var cols = new ArrayList<SqlAttributeMapping.SingleColumn>();
+        cols.add(col("id", SqlSchemaValueMapping.INTEGER));
+        for (int i = 0; i < additionalCount; i++) {
+            cols.add(col("col" + i, SqlSchemaValueMapping.INTEGER));
+        }
+        var composite = SqlAttributeMapping.multiColumn(cols.getFirst(), cols.subList(1, cols.size()), ".");
         PathBuilder<Object> tablePath = new PathBuilder<>(Object.class, "test_table");
         Collection<? extends Path<?>> paths = composite.selectPaths(tablePath);
-
-        assertThat(paths).hasSize(3);
+        assertThat(paths).hasSize(cols.size());
     }
 
-    @Test
-    public void testSelectPathsNoAdditional() {
-        var main = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("id"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-
-        var composite = SqlAttributeMapping.multiColumn(main, Collections.emptyList(), ".");
-        PathBuilder<Object> tablePath = new PathBuilder<>(Object.class, "test_table");
-        Collection<? extends Path<?>> paths = composite.selectPaths(tablePath);
-
-        assertThat(paths).hasSize(1);
-    }
-
-    // ── 5. sqlFilter returns non-null FilterSupport ───────────────────────
+    // ── FilterSupport ──
 
     @Test
     public void testSqlFilterReturnsFilterSupport() {
-        var main = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("id"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-        var extra = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("dept_id"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-
-        var composite = SqlAttributeMapping.multiColumn(main, List.of(extra), ".");
-        assertThat(composite.sqlFilter()).isNotNull();
+        var composite = SqlAttributeMapping.multiColumn(
+                col("id", SqlSchemaValueMapping.INTEGER),
+                List.of(col("dept_id", SqlSchemaValueMapping.INTEGER)), ".");
+        assertThat(composite.sqlFilter())
+                .isNotNull()
+                .isInstanceOf(SqlAttributeMapping.FilterSupport.class);
     }
 
-    @Test
-    public void testSqlFilterFilterSupportIsCorrectType() {
-        var main = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("id"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-        var extra = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("dept_id"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-
-        var composite = SqlAttributeMapping.multiColumn(main, List.of(extra), ".");
-        assertThat(composite.sqlFilter()).isInstanceOf(SqlAttributeMapping.FilterSupport.class);
-    }
-
-    // ── 6. ConnId type, singleValue, delimiter ────────────────────────────
+    // ── ConnId type, singleValue ──
 
     @Test
     public void testConnIdTypeIsString() {
-        var main = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("id"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-        var extra = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("dept_id"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-
-        var composite = SqlAttributeMapping.multiColumn(main, List.of(extra), ".");
+        var composite = SqlAttributeMapping.multiColumn(
+                col("id", SqlSchemaValueMapping.INTEGER),
+                List.of(col("dept_id", SqlSchemaValueMapping.INTEGER)), ".");
         assertThat(composite.connIdType()).isEqualTo(String.class);
     }
 
     @Test
-    public void testSingleValueFromAttributeReturnsSameValue() {
-        var main = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("id"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-        var extra = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("dept_id"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-
-        var composite = SqlAttributeMapping.multiColumn(main, List.of(extra), ".");
+    public void testSingleValueAndNull() {
+        var composite = SqlAttributeMapping.multiColumn(
+                col("id", SqlSchemaValueMapping.INTEGER),
+                List.of(col("dept_id", SqlSchemaValueMapping.INTEGER)), ".");
         assertThat(composite.singleValueFromAttribute("10.20")).isEqualTo("10.20");
-    }
-
-    @Test
-    public void testSingleValueFromAttributeNull() {
-        var main = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("id"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-        var extra = SqlAttributeMapping.singleColumn(
-                DefinitionValue.defaultFrom("dept_id"),
-                SqlSchemaValueMapping.INTEGER, SqlSchemaValueMapping.INTEGER);
-
-        var composite = SqlAttributeMapping.multiColumn(main, List.of(extra), ".");
         assertThat(composite.singleValueFromAttribute(null)).isNull();
     }
 
@@ -479,38 +291,26 @@ public class SqlCompositeUidTest {
     public void testBuilderCreatesMultiColumn() {
         var builder = new SqlAttributeBuilderImpl(null, DefinitionValue.defaultFrom("id"));
         var mBuilder = builder.sql();
-
         mBuilder.valueMapping(DefinitionValue.detected(SqlSchemaValueMapping.INTEGER));
-        mBuilder.additionalColumns()
-                .column("version", SqlSchemaValueMapping.INTEGER);
-
-        var result = mBuilder.build();
-
-        assertThat(result).isNotNull();
-        assertThat(result).isInstanceOf(SqlAttributeMapping.MultiColumn.class);
-
-        var composite = (SqlAttributeMapping.MultiColumn) result;
-        assertThat(composite.mainColumn()).isNotNull();
-        assertThat(composite.additionalColumns()).hasSize(1);
-        assertThat(composite.column().value()).isEqualTo("id");
+        mBuilder.additionalColumns().column("version", SqlSchemaValueMapping.INTEGER);
+        var result = (SqlAttributeMapping.MultiColumn) mBuilder.build();
+        assertThat(result.additionalColumns()).hasSize(1);
+        assertThat(result.column().value()).isEqualTo("id");
+        assertThat(result.delimiter()).isEqualTo(".");
     }
 
     @Test
-    public void testBuilderTwoExtraColumns() {
+    public void testBuilderMultipleExtraColumns() {
         var builder = new SqlAttributeBuilderImpl(null, DefinitionValue.defaultFrom("id"));
         var mBuilder = builder.sql();
-
         mBuilder.valueMapping(DefinitionValue.detected(SqlSchemaValueMapping.INTEGER));
         var uidCols = mBuilder.additionalColumns();
         uidCols.column("first", SqlSchemaValueMapping.INTEGER);
         uidCols.column("second", SqlSchemaValueMapping.INTEGER);
-
-        var result = mBuilder.build();
-
-        assertThat(result).isInstanceOf(SqlAttributeMapping.MultiColumn.class);
-        var composite = (SqlAttributeMapping.MultiColumn) result;
-        assertThat(composite.additionalColumns()).hasSize(2);
+        var result = (SqlAttributeMapping.MultiColumn) mBuilder.build();
+        assertThat(result.additionalColumns()).hasSize(2);
     }
+<<<<<<< HEAD
 
     @Test
     public void testBuilderDefaultDelimiter() {
